--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,28 +9,14 @@
       </button>
       <a class="navbar-brand" href="/">Home</a>
     </div>
-    <div class="navbar-collapse collapse">
-      <%= form_for @user, html: {class: 'navbar-form navbar-right'} do |f| %>
-        <div class="form-group">
-          <%= f.text_field :name, class: 'form-control', placeholder: 'Name' %>
-        </div>
-        <div class="form-group">
-          <%= f.text_field :age, class: 'form-control', placeholder: 'Age' %>
-        </div>
-        <div class="form-group">
-          <%= f.text_field :Major, class: 'form-control', placeholder: 'Major' %>
-        </div>
-        <%= f.submit "Create", class: 'btn btn-success' %>
-      <% end %>
-    </div><!--/.navbar-collapse -->
   </div>
 </div>
 
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
   <div class="container">
-    <h1>User Addition</h1>
-    <p>Add users above ^</p>
+    <h1>I am Jason.</h1>
+    <p>I do computer stuff.</p>
   </div>
 </div>
 
